<resources>
    <string name="app_name">每日英语</string>


    <!--Login-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_title">每日英语</string>
    <string name="login">登录</string>
    <string name="tip_register">没有账号，立即注册</string>
    <string name="register">注册并登录</string>
    <string name="nickName">昵称</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"登陆失败"</string>


</resources>