<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.xxx.wordingtech.ui.login.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activityMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_design">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="60dp"
            android:text="@string/login_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/account"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:text="@={viewModel.account}"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/password"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:text="@={viewModel.password}"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/btnServerLogin"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:text="@string/login"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/btn_go_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/tip_register"
                android:textColor="#fff"
                android:textSize="16dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>