<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.xxx.wordingtech.ui.register.RegisterViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:id="@+id/activityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_design">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="80dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="60dp"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_nick_name"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/nickName"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:text="@={viewModel.nickName}"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <RadioGroup
                        android:id="@+id/rg_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_mail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="男"
                            android:textSize="18dp" />

                        <RadioButton
                            android:id="@+id/rb_femail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="女"
                            android:textSize="18dp" />

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/account"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:text="@={viewModel.account}"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:text="@={viewModel.password}"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_register"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:text="@string/register"
                        android:textSize="18dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </FrameLayout>

</layout>